# fastAPi-test-case

./: Dockerfile  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml  readme.md
alembic/: env.py
application/: exceptions.py  schemas.py  use_cases.py
domain/: dto.py  entities.py  exceptions.py  repositories.py  services.py
infrastructure/: base_repository.py  database.py  models.py  repositories.py
migrations/: env.py
migrations/versions/: 001_create_prediction_logs_table.py
presentation/: controllers.py  exceptions.py
scripts/: migrate.py
tests/: conftest.py  test_api.py
utils/: logger.py
